[Bug 424018] Externalize strings

--- a/bundles/org.eclipse.emf.emfstore.client/src/org/eclipse/emf/emfstore/internal/client/model/impl/api/messages.properties
+++ b/bundles/org.eclipse.emf.emfstore.client/src/org/eclipse/emf/emfstore/internal/client/model/impl/api/messages.properties
@@ -2,3 +2,6 @@ ESLocalProjectImpl_No_Usersession_Found=No usersession or no server set on users
 ESRemoteProjectImpl_Fetching_Project=Fetching project from server...
 ESRemoteProjectImpl_Fetching_Title=Fetch
 ESRemoteProjectImpl_Server_Returned_Null_Project=Server returned a null project\!
+ESServerImpl_Creating_Project=Creating project {0}
+ESServerImpl_Invalid_Userssesion=Invalid usersession for given server.
+ESWorkspaceImpl_Server_Not_Found=The server {0} could not be found
