Bug 424018: Externalize strings

--- a/bundles/org.eclipse.emf.emfstore.client/src/org/eclipse/emf/emfstore/internal/client/model/impl/messages.properties
+++ b/bundles/org.eclipse.emf.emfstore.client/src/org/eclipse/emf/emfstore/internal/client/model/impl/messages.properties
@@ -1,1 +1,5 @@
 ModelFactoryImpl_Invalid_Classifier=The class {0} is not a valid classifier
+UsersessionImpl_Invalid_Server_URL=Invalid server url: null
+UsersessionImpl_No_ServerInfo_Set=No ServerInfo set\!
+UsersessionImpl_Username=\ (username: 
+UsersessionImpl_Username_Or_Password_not_Set=Username or Password not set\!
