Bug 424018: Externalize strings

--- a/bundles/org.eclipse.emf.emfstore.client/src/org/eclipse/emf/emfstore/internal/client/model/connectionmanager/messages.properties
+++ b/bundles/org.eclipse.emf.emfstore.client/src/org/eclipse/emf/emfstore/internal/client/model/connectionmanager/messages.properties
@@ -1,5 +1,17 @@
+BasicSessionProvider_No_Usersession_Found=No usersession found.
+BasicSessionProvider_Usersession_Not_Logged_In=Usersession not logged in. Login first.
 ConnectionManager_Encoding_Problem=Problem with en/decoding.
 ConnectionManager_Incompatible_Client_Version=Client version not compatible with server. Please update your client.
 ConnectionManager_Login_Refused=Login refused.
 ConnectionManager_Server_Could_Not_Be_Reached=Server could not be reached.\n
 ConnectionManager_Session_Unknown=Session unknown to Connection manager, log in first\!
+KeyStoreManager_29=Loading certificate failed\!
+KeyStoreManager_34=Couldn't encrypt password.
+KeyStoreManager_Cannot_Delete_Default_Certificate=Cannot delete default certificate\!
+KeyStoreManager_Choose_Valid_Certificate=Please choose a valid certificate\!
+KeyStoreManager_Could_Not_Encrypt_Password=Couldn't encrypt password.
+KeyStoreManager_Deleting_Certificate_Failed=Deleting certificate failed\!
+KeyStoreManager_Keystore_Not_Initialized=Keystore has not been initialized, or entry cannot be removed.
+KeyStoreManager_Loading_Certificate_Failed=Loading certificates failed\!
+KeyStoreManager_Storing_Certificate_Failed=Storing certificate failed\!
+KeyStoreManager_Unable_To_Get_Password=Unable to get certificate for password encryption.
