Bug 425766: Make ProjectAdminRole configurable, removed warnings

--- a/bundles/org.eclipse.emf.emfstore.server/src/org/eclipse/emf/emfstore/internal/server/messages.properties
+++ b/bundles/org.eclipse.emf.emfstore.server/src/org/eclipse/emf/emfstore/internal/server/messages.properties
@@ -1,1 +1,29 @@
 DefaultServerWorkspaceLocationProvider_InvalidRootDir=Invalid root directory specified.  Using default 
+EMFStoreController_Added_SuperUser=added superuser 
+EMFStoreController_Cause_For_Server_Shutdown=Cause for server shutdown: 
+EMFStoreController_Closing_Of_Properties_File_Failed=Closing of properties file failed.
+EMFStoreController_ConnectionHandler_Stopped=Connection handler "{0}" stopped
+EMFStoreController_Copy_From_To=Copy of file from {0} to {1} failed.
+EMFStoreController_Could_Not_Copy_Properties_File=Couldn't copy es.properties file to config folder.
+EMFStoreController_Could_Not_Init_XMLResource=Could not init XMLRessource
+EMFStoreController_Creating_Initial_ServerSpace=Creating initial server space...
+EMFStoreController_Default_Properties_File_Copied=Default es.properties file was copied to config folder.
+EMFStoreController_Dynamic_Model_Loaded=Dynamic Model "{0}" loaded.
+EMFStoreController_EMFStore_Controller_Already_Running=Another EmfStore Controller seems to be running already\!
+EMFStoreController_Error_During_Migration=Error during migration
+EMFStoreController_Failed_To_Copy_Keystore=Failed to copy keystore.
+EMFStoreController_Init_Complete=Initialitation COMPLETE.
+EMFStoreController_JVM_Max_Memory=JVM Max Memory: {0} MByte
+EMFStoreController_Keystore_Copied=Keystore was copied to server workspace.
+EMFStoreController_Property_Init_Failed=Property initialization failed, using default properties.
+EMFStoreController_PropertyFile_Read=Property file read. ({0})
+EMFStoreController_Serve_Forcefully_Stopped=Server was forcefully stopped.
+EMFStoreController_Server_Home=Server data home location: 
+EMFStoreController_Server_Running=Server is RUNNING...Time to relax...
+EMFStoreController_Server_Stopped=Server is STOPPED.
+EMFStoreController_Server_Was_Stopped=Server was stopped.
+EMFStoreController_Stopping_All_ConnectionHandlers=Stopping all connection handlers...
+EMFStoreController_Stopping_ConnectionHandler=Stopping connection handler "{0}.
+EMFStoreController_Waiting_For_Termination_Interrupted=Waiting for termination was interrupted
+ServerConfiguration_Default_Checksum_Behavior=Can not determine whether to compute checksums on commit, default is true.
+ServerConfiguration_No_Location_Provider=No location provider or error while instantiating location provider, switching to default location\!
